remove dup in test jvmArgs plus reduce locale issues on jdk9+